--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -17,18 +17,28 @@ permissions:
   contents: read
 
 jobs:
-  build:
-
-    runs-on: ubuntu-latest
+  build: 
+    runs-on: ubuntu-latest # 실행 환경 지정
 
     steps:
-    - uses: actions/checkout@v3
-    - name: Set up JDK 17
-      uses: actions/setup-java@v3
-      with:
-        java-version: '17'
-        distribution: 'temurin'
-    - name: Build with Gradle
-      uses: gradle/gradle-build-action@bd5760595778326ba7f1441bcf7e88b49de61a25 # v2.6.0
-      with:
-        arguments: build
+      - uses: actions/checkout@v2 # github action 버전 지정(major version)
+
+      - name: Set up JDK 17 # JAVA 버전 지정
+        uses: actions/setup-java@v1
+        with:
+          java-version: 17
+
+      - name: Grant execute permission for gradlew
+        run: chmod +x gradlew
+
+      - name: Build with Gradle # 실제 application build(-x 옵션을 통해 test는 제외)
+        run: ./gradlew build -x test
+
+      - name: Test with Gradle # test application build
+        run: ./gradlew test
+
+      - name: Publish Unit Test Results # test 후 result를 보기 위해 추가
+        uses: EnricoMi/publish-unit-test-result-action@v1
+        if: ${{ always() }} # test가 실패해도 report를 남기기 위해 설정
+        with:
+          files: build/test-results/**/*.xml
