--- a/src/appspec.yml
+++ b/src/appspec.yml
@@ -4,6 +4,9 @@ os: linux
 files:
   - source: /
     destination: /home/ubuntu/plug
+    overwrite: yes
+file_exists_behavior: OVERWRITE
+
 permissions:
   - object: /home/ubuntu/plug/
     owner: ubuntu
