--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -5,13 +5,20 @@
 # This workflow will build a Java project with Gradle and cache/restore any dependencies to improve the workflow execution time
 # For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-java-with-gradle
 
-name: Plug CI
+name: Build and Deploy Spring Boot to AWS EC2
 
 on:
   push:
     branches: [ "main" ]
   pull_request:
     branches: [ "main" ]
+# --------------------------추가
+env:
+  PROJECT_NAME: plug_project
+  BUCKET_NAME: plug-cicd-bucket
+  CODE_DEPLOY_APP_NAME: plug_cicd
+  DEPLOYMENT_GROUP_NAME: plug_instance
+# --------------------------추가
 
 permissions:
   contents: read
@@ -36,3 +43,26 @@ jobs:
       uses: gradle/gradle-build-action@bd5760595778326ba7f1441bcf7e88b49de61a25 # v2.6.0
       with:
         arguments: "build --exclude-task test"
+# --------------------------추가      
+    - name: Make Zip File
+      run: zip -qq -r ./$GITHUB_SHA.zip .
+      shell: bash
+        
+    - name: Configure AWS credentials
+      uses: aws-actions/configure-aws-credentials@v1
+      with:
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.AWS_PRIVATE_ACCESS_KEY }}
+          aws-region: ap-northeast-2
+      
+    - name: Upload to S3
+      run: aws s3 cp --region ap-northeast-2 ./$GITHUB_SHA.zip s3://$BUCKET_NAME/$PROJECT_NAME/$GITHUB_SHA.zip
+
+    - name: Code Deploy To EC2 instance
+      run: aws deploy create-deployment 
+                --application-name $CODE_DEPLOY_APP_NAME 
+                --deployment-config-name CodeDeployDefault.AllAtOnce
+                --deployment-group-name $DEPLOYMENT_GROUP_NAME 
+                --s3-location bucket=$BUCKET_NAME,bundleType=zip,key=$PROJECT_NAME/$GITHUB_SHA.zip
+# --------------------------추가
+
