--- a/src/appspec.yml
+++ b/src/appspec.yml
@@ -4,12 +4,19 @@ os: linux
 files:
   - source: /
     destination: /home/ubuntu/plug
+    overwrite: yes
+
+file_exists_behavior: OVERWRITE
+
 permissions:
   - object: /home/ubuntu/plug/
     owner: ubuntu
     group: ubuntu
 hooks:
-  AfterInstall:
-    - location: scripts/deploy.sh
-      timeout: 60
-      runas: ubuntu
+  hooks:
+
+    AfterInstall:
+      - location: scripts/deploy
+        timeout: 60
+        runas: ubuntu
+
