--- a/src/appspec.yml
+++ b/src/appspec.yml
@@ -12,11 +12,11 @@ permissions:
   - object: /home/ubuntu/plug/
     owner: ubuntu
     group: ubuntu
+
 hooks:
   hooks:
-
     AfterInstall:
-      - location: scripts/deploy
-        timeout: 60
+      - location: scripts/deploy.sh
+        timeout: 180
         runas: ubuntu
 
