--- a/src/appspec.yml
+++ b/src/appspec.yml
@@ -9,7 +9,8 @@ files:
 file_exists_behavior: OVERWRITE
 
 permissions:
-  - object: /home/ubuntu/plug/
+  - object: /
+    pattern: "**"
     owner: ubuntu
     group: ubuntu
 
