test CI/CD pipeline

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/plug
-spring.datasource.username=root
+spring.datasource.url=jdbc:mysql://3.35.239.97:3306/plug
+spring.datasource.username=plug
 spring.datasource.password=1502
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
